--- a/web-app/Pipfile
+++ b/web-app/Pipfile
@@ -7,6 +7,10 @@ name = "pypi"
 pylint = "*"
 black = "*"
 flask = "*"
+pymongo = "*"
+coverage = "*"
+pytest = "*"
+pytest-flask = "*"
 
 [dev-packages]
 
