--- a/machine-learning-client/Pipfile
+++ b/machine-learning-client/Pipfile
@@ -13,6 +13,11 @@ torch = "*"
 pymongo = "*"
 
 [dev-packages]
+pytest = "*"
+pytest-cov = "*"
+coverage = "*"
+black = "*"
+pylint = "*"
 
 [requires]
 python_version = "3.10"
