--- a/.github/workflows/web-app-ci.yml
+++ b/.github/workflows/web-app-ci.yml
@@ -20,6 +20,12 @@ jobs:
       run:
         working-directory: web-app
 
+      services:
+        mongodb:
+          image: mongo:latest
+          ports:
+            - 27017:27017
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
