--- a/.github/workflows/ml-client-ci.yml
+++ b/.github/workflows/ml-client-ci.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          pipenv run pytest \
+          PYTHONPATH=src pipenv run pytest tests/ \
             --cov=src \ 
             --cov-report=term-missing \
             --cov-fail-under=80
