--- a/.github/workflows/ml-client-ci.yml
+++ b/.github/workflows/ml-client-ci.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          PYTHONPATH=src pipenv run pytest tests/ \
+          PYTHONPATH=. pipenv run pytest tests/ \
             --cov=src \ 
             --cov-report=term-missing \
             --cov-fail-under=80
