--- a/.github/workflows/ml-client-ci.yml
+++ b/.github/workflows/ml-client-ci.yml
@@ -49,6 +49,7 @@ jobs:
 
       - name: Run tests with coverage
         run: |
+            cd machine-learning-client
             pipenv run pytest tests/ \
             --cov=src \ 
             --cov-report=term-missing \
