--- a/.github/workflows/ml-client-ci.yml
+++ b/.github/workflows/ml-client-ci.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-            PYTHONPATH=. pipenv python -m run pytest \
+            PYTHONPATH=. pipenv run pytest \
             --cov=src \ 
             --cov-report=term-missing \
             --cov-fail-under=80
