--- a/.github/workflows/ml-client-ci.yml
+++ b/.github/workflows/ml-client-ci.yml
@@ -47,9 +47,12 @@ jobs:
           echo "Listing all files recursively..."
           ls -R
 
+      # - name: Run tests with coverage
+      #   run: |
+      #       PYTHONPATH=. pipenv run pytest \
+      #       --cov=src \ 
+      #       --cov-report=term-missing \
+      #       --cov-fail-under=80
       - name: Run tests with coverage
-        run: |
-            PYTHONPATH=. pipenv run pytest \
-            --cov=src \ 
-            --cov-report=term-missing \
-            --cov-fail-under=80
+        run: PYTHONPATH=. pipenv run pytest --cov=src --cov-report=term-missing --cov-fail-under=80
+
