--- a/.github/workflows/ml-client-ci.yml
+++ b/.github/workflows/ml-client-ci.yml
@@ -33,7 +33,10 @@ jobs:
         run: pip install pipenv
 
       - name: Install dependencies with pipenv
-        run: pipenv install --dev --deploy --python $(which python)
+        run: |
+          pipenv install --dev --deploy --python $(which python)
+          pipenv run pip uninstall -y torch
+          pipenv run pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 
       - name: Run black (format check)
         run: pipenv run black --check .
