--- a/machine-learning-client/Pipfile
+++ b/machine-learning-client/Pipfile
@@ -7,7 +7,7 @@ name = "pypi"
 pylint = "*"
 black = "*"
 numpy = "*"
-opencv-python = "*"
+opencv-python-headless = "*"
 mediapipe = "==0.10.18"
 torch = "*"
 pymongo = "*"
