--- a/.github/workflows/ml-client-ci.yml
+++ b/.github/workflows/ml-client-ci.yml
@@ -28,6 +28,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+    
+      - name: Install system dependencies for OpenCV
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgl1-mesa-glx
 
       - name: Install pipenv
         run: pip install pipenv
@@ -35,6 +40,8 @@ jobs:
       - name: Install dependencies with pipenv
         run: |
           pipenv install --dev --deploy --python $(which python)
+          pipenv run pip uninstall -y torch
+          pipenv run pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 
       - name: Run black (format check)
         run: pipenv run black --check .
