--- a/.github/workflows/ml-client-ci.yml
+++ b/.github/workflows/ml-client-ci.yml
@@ -28,6 +28,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+      
+      - name: Install system dependencies for MediaPipe
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgl1 libegl1
 
       - name: Install pipenv
         run: pip install pipenv
